Resolves tdf#71095 Calc doesn't paste images copied from some web browsers

Fixed. When I try to paste an web image copied from web browser, it paste now

Reviewed-on: https://gerrit.libreoffice.org/14529
Tested-by: Jenkins <ci@libreoffice.org>
Reviewed-by: Caolán McNamara <caolanm@redhat.com>
Tested-by: Caolán McNamara <caolanm@redhat.com>
(cherry picked from commit b05330c64799067ca2e0b8ea8bfdee8ce8b023b2)
Signed-off-by: Andras Timar <andras.timar@collabora.com>

Conflicts:
	sc/source/ui/view/viewfun3.cxx

Change-Id: I696feb3438022b506303b2f354ac9c4d306e08f4